src/test/ui/const-generics/const-param-in-trait-ungated.rs
trait Trait<const T: ()> {} //~ ERROR const generics are unstable

fn main() {}
